# VertAX

./: .gitignore  LICENSE  README.md  bilevel_opt_hetero_manning.py  energy_min.py  pyproject.toml  requirements.txt  rigid_trans_diagram_manning.py  test_forward_modeling.py  test_inverse_modeling.py  test_minimization.py  typos.toml
2_inference_multiple/: bilevel_opt_lines_LESS.py
archive/: cost_mesh2image.py  create_init_cond_from_seeds.py
archive/vertax/: cost.py  opt.py  start.py
automatic_diff/: ad_model.py  start_cond.py
automatic_diff/vertax/: create_initial_condition.py  topo copy.py
dev/scripts/: binaries_utils.py  create_initial_condition.py  initial_condition_utils.py  plot_binaries.py  vertTable.npy
dev/tmp/: plot_binaries.py
docs/: index.html  inverse_modelling_example.ipynb  inverse_modelling_example_bounded.ipynb  pbc_from_image.ipynb  search.js  vertax.html
examples/: inverse_modelling_example.ipynb
good_initial_condition0/equilibrium/: heTable.npy  (+2 more)
init_cond_100cells_0.2min_dist_T1_3.72p0_homo/: faceTable.npy  heTable.npy
tests/: reference_result_test_inverse_modeling.npz  reference_result_test_inverse_modeling_bounded.npz  reference_result_test_minimization.npz  test_cpu_vs_gpu.py  test_forward_modeling.py  test_forward_modeling_bounded.py  test_image.py  test_inverse_modeling.py  test_inverse_modeling_bounded.py  test_inverse_modeling_rect.py  test_mesh.py  test_minimization.py  test_n_bilevel_opt.py  test_n_bilevel_opt_bounded.py  test_plot.py  test_plot_rectangular.py
vertax/: cost.py  geo.py  opt.py  plot.py  topo_T1_checked.py
(+1287 files in other folders)
