[project]
name = "vertax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cellpose==3.1.0",
    "jaxlib==0.4.34",
    "jaxopt==0.8.3",
    "matplotlib==3.8.0",
    "numpy==1.26.4",
    "optax==0.2.4",
    "scikit-image==0.24.0",
    "scipy>=1.16.2",
    "tifffile==2024.12.12",
]
